--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <title>Week 2 Friday Challange</title>
 </head>
 
@@ -12,25 +12,25 @@
 <body>
     <main>
         <div>
-            <img src="cc-apple-pay-brands.svg" alt="apple">
+            <img style="background-color: #51C3CD;" src="cc-apple-pay-brands.svg" alt="apple">
             <h1>discover</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ut iste optio maiores? Maxime eligendi voluptatum, fuga quibusdam voluptate fugit maiores blanditiis voluptatibus minima eius enim vel in hic nihil!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ducimus asperiores quis itaque placeat dicta ut omnis magnam blanditiis, quae iste quidem! Non aliquid ratione sequi! Magni non aspernatur autem!</p>
         </div>
-
+        
         <div>
-            <img src="university-solid.svg" alt="university">
+            <img style="background-color: #3A6EC1;" src="university-solid.svg" alt="university">
             <h1>design</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum molestias, officia corporis aliquid, dignissimos debitis veniam repudiandae architecto labore minus ipsam laboriosam qui dolorem officiis optio doloremque aperiam in vel?</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ducimus asperiores quis itaque placeat dicta ut omnis magnam blanditiis, quae iste quidem! Non aliquid ratione sequi! Magni non aspernatur autem!</p>
         </div>
 
-        <div>
-            <img src="users-solid.svg" alt="user">
+        <div> 
+            <img style="background-color: #F34D33;" src="users-solid.svg" alt="user">
             <h1>develop</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ducimus asperiores quis itaque placeat dicta ut omnis magnam blanditiis, quae iste quidem! Non aliquid ratione sequi! Magni non aspernatur autem!</p>
         </div>
 
         <div>
-            <img src="random-solid.svg" alt="solid">
+            <img style="background-color: #919191;" src="random-solid.svg" alt="solid">
             <h1>deploy</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ducimus asperiores quis itaque placeat dicta ut omnis magnam blanditiis, quae iste quidem! Non aliquid ratione sequi! Magni non aspernatur autem!</p>
         </div>
