--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body>
     <main>
         <div>
-            <img style="background-color: #51C3CD;" src="cc-apple-pay-brands.svg" alt="apple">
+            <img style="background-color: #51C3CD;" src="./img/cc-apple-pay-brands.svg" alt="apple">
             <h1>discover</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ducimus asperiores quis itaque placeat dicta ut omnis magnam blanditiis, quae iste quidem! Non aliquid ratione sequi! Magni non aspernatur autem!</p>
         </div>
         
         <div>
-            <img style="background-color: #3A6EC1;" src="university-solid.svg" alt="university">
+            <img style="background-color: #3A6EC1;" src="./img/university-solid.svg" alt="university">
             <h1>design</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ducimus asperiores quis itaque placeat dicta ut omnis magnam blanditiis, quae iste quidem! Non aliquid ratione sequi! Magni non aspernatur autem!</p>
         </div>
 
         <div> 
-            <img style="background-color: #F34D33;" src="users-solid.svg" alt="user">
+            <img style="background-color: #F34D33;" src="./img/users-solid.svg" alt="user">
             <h1>develop</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ducimus asperiores quis itaque placeat dicta ut omnis magnam blanditiis, quae iste quidem! Non aliquid ratione sequi! Magni non aspernatur autem!</p>
         </div>
 
         <div>
-            <img style="background-color: #919191;" src="random-solid.svg" alt="solid">
+            <img style="background-color: #919191;" src="./img/random-solid.svg" alt="solid">
             <h1>deploy</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ducimus asperiores quis itaque placeat dicta ut omnis magnam blanditiis, quae iste quidem! Non aliquid ratione sequi! Magni non aspernatur autem!</p>
         </div>
